# gnome-iris

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  hk.pkl  mise.toml  rust-toolchain.toml  rustfmt.toml
data/: catalog.json  org.gnome.Iris.gschema.xml
data/icons/: icons.gresource.xml
docs/: MIGRATION.md  README.md  build-system.md  data-model.md  i18n.md  project-structure.md  relm4-components.md  ui-patterns.md
docs/plans/: 2026-03-07-gnome-iris-implementation.md  2026-03-07-reshade-linux-design.md  2026-03-15-architecture-improvements.md  2026-03-16-maintainability-improvements.md
docs/superpowers/plans/: 2026-03-13-version-picker-on-install.md  2026-03-14-game-list-update-pill.md  2026-03-17-split-preferences.md
docs/superpowers/specs/: 2026-03-13-version-picker-on-install-design.md  2026-03-14-game-list-update-pill-design.md
i18n/en-US/: gnome_iris.ftl  iris.ftl
i18n/es-ES/: gnome_iris.ftl  iris.ftl
i18n/fr-FR/: gnome_iris.ftl  iris.ftl
i18n/it-IT/: gnome_iris.ftl  iris.ftl
i18n/pt-BR/: gnome_iris.ftl  iris.ftl
src/: lib.rs  localization.rs  main.rs
src/reshade/: app_state.rs  cache.rs  catalog.rs  config.rs  d3dcompiler.rs  game.rs  install.rs  mod.rs  paths.rs  reshade.rs  services.rs  shaders.rs  steam.rs
src/ui/: about.rs  add_game_dialog.rs  add_shader_repo_dialog.rs  game_detail.rs  game_list.rs  game_shader_overrides.rs  install_version_dialog.rs  install_worker.rs  mod.rs  pick_reshade_version_dialog.rs  preferences.rs  shader_catalog.rs  shader_worker.rs  window.rs  worker_types.rs
src/ui/preferences/: mod.rs  panel_versions.rs
src/ui/window/: mod.rs  panel_games.rs  panel_preferences.rs  panel_shaders.rs
tests/: app_state.rs  install_flow.rs  services.rs  shader_sync.rs
tests/fixtures/: libraryfolders.vdf
